--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@
     padding: 0;
     margin: 0;
 }
+body {
+    color: white;
+}
 nav {
     display: flex;
     padding: 1rem 2rem;
     align-items: center;
     justify-content: space-between;
-    background-color: lightcoral;
+    background-color: rgb(19, 19, 19);
 }
 ul {
     list-style: none;
@@ -23,10 +26,10 @@ main {
 section {
     padding: 1rem;
     width: 70%;
-    background-color: lightsalmon;
+    background-color: rgb(22, 22, 22);
 }
 aside {
     padding: 1rem;
     width: 30%;
-    background-color: lightseagreen;
+    background-color: rgb(27, 27, 27);
 }
