--- a/Class Exercise 02/style.css
+++ b/Class Exercise 02/style.css
@@ -17,29 +17,32 @@ button{
 button:hover{
     background-color: rgb(32, 32, 32);
 }
-.side-bar {
+#side-bar {
     position: fixed;
     background-color: darkcyan;
     z-index: 1000;
-    width: 10vw;
+    width: 0vw;
+    padding: 0;
+    overflow: hidden;
     height: 100vh;
-    padding: 1.5rem 2rem;
+    transition: all 300ms ease;
 }
-.side-bar ul {
+#side-bar ul {
     margin-top: 2rem;
     list-style: none;
 }
-.side-bar ul a{
+#side-bar ul a{
     color: white;
     text-decoration: none;
 }
-.main-section {
+#main-section {
     width: 25vw;
     height: 100vh;
     padding: 2rem;
-    margin-left: 12.5rem;
+    margin-left: 0;
+    transition: margin 300ms ease;
 }
-.main-section h2{
+#main-section h2{
     margin-top: 2rem;
 }
 .my-form {
