--- a/Class Exercise 02/style.css
+++ b/Class Exercise 02/style.css
@@ -21,7 +21,7 @@ button:hover{
     position: fixed;
     background-color: darkcyan;
     z-index: 1000;
-    width: 0vw;
+    width: 0;
     padding: 0;
     overflow: hidden;
     height: 100vh;
@@ -36,7 +36,7 @@ button:hover{
     text-decoration: none;
 }
 #main-section {
-    width: 25vw;
+    width: 25rem;
     height: 100vh;
     padding: 2rem;
     margin-left: 0;
