Added a margin-top to list elements to add some breathing room

--- a/Class Exercise 02/style.css
+++ b/Class Exercise 02/style.css
@@ -35,6 +35,9 @@ button:hover{
     color: white;
     text-decoration: none;
 }
+#side-bar ul li {
+    margin-top: 1rem;
+}
 #main-section {
     width: 25rem;
     height: 100vh;
