Added a function that adds a class to the body to change the color

--- a/Class Exercise 03/style.css
+++ b/Class Exercise 03/style.css
@@ -19,3 +19,19 @@ input , select{
 section > *{
    margin-bottom: 1.5rem;
 }
+.white {
+    background-color: white;
+    color: black;
+}
+.black {
+    background-color: #1b1717;
+    color: white;
+}
+.orange {
+    background-color: #ff9a49;
+    color: black;
+}
+.navy {
+    background-color: #1a374b;
+    color: white;
+}
