--- a/Class Exercise 04/style.css
+++ b/Class Exercise 04/style.css
@@ -7,11 +7,11 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .container {
+    height: 100vh;
     max-width: 1300px;
     margin: 0 auto;
 }
 .services {
-    height: 100vh;
     background-color: lightskyblue;
     padding: 0 2rem;
 }
@@ -20,4 +20,41 @@ body {
     justify-content: space-between;
     align-items: center;
     height: 50vh;
+    gap: 1rem;
+}
+.services-section div {
+    flex: 1 1 50%;
+}
+.services-section div {
+    flex: 1 1 50%;
+}
+.services-section span {
+    display: inline-block;
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    margin-bottom: .35rem;
+}
+.services-heading {
+    font-size: 2.8rem;
+    line-height: 1.3;
+}
+.services-copy {
+    font-size: 1.1rem;
+    line-height: 1.7;
+}
+.underline {
+    width: 20%;
+    height: .4rem;
+    background-color: rgb(255, 255, 255);
+    margin: 1rem 0;
+}
+.main-btn {
+    border: none;
+    border-radius: 50rem;
+    padding: .95rem 2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: .75rem;
+    margin-top: 1rem;
+    letter-spacing: .1rem;
 }
