--- a/Class Exercise 04/style.css
+++ b/Class Exercise 04/style.css
@@ -7,26 +7,21 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .container {
-    height: 100vh;
     max-width: 1300px;
     margin: 0 auto;
 }
 .services {
     background-color: lightskyblue;
-    padding: 0 2rem;
+    padding: 5rem 2rem;
 }
 .services-section {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
-    height: 50vh;
     gap: 1rem;
 }
 .services-section div {
-    flex: 1 1 50%;
-}
-.services-section div {
-    flex: 1 1 50%;
+    flex: 1 1 15rem;
 }
 .services-section span {
     display: inline-block;
@@ -41,6 +36,7 @@ body {
 .services-copy {
     font-size: 1.1rem;
     line-height: 1.7;
+    padding-top: 2rem;
 }
 .underline {
     width: 20%;
@@ -57,4 +53,33 @@ body {
     font-size: .75rem;
     margin-top: 1rem;
     letter-spacing: .1rem;
+    cursor: pointer;
+}
+.cards-section {
+    padding-top: 3rem;
+    display: flex;
+    gap: 1rem;
+    width: 100%;
+    flex-wrap: wrap;
+}
+.card {
+    flex: 1 1 20rem;
+    text-align: center;
+    background-color: aliceblue;
+    padding: 1.2rem;
+}
+.card > * {
+    padding-bottom: 1rem;
+}
+.card img {
+    width: 100%;
+    height: 25rem;
+    object-fit: cover;
+}
+.card h4 {
+    font-size: 1.5rem;
+    margin: 1rem 0;
+}
+.card p {
+    line-height: 1.7;
 }
