--- a/Class Exercise 04/style.css
+++ b/Class Exercise 04/style.css
@@ -11,7 +11,7 @@ body {
     margin: 0 auto;
 }
 .services {
-    background-color: lightskyblue;
+    background-color: #F2561D;
     padding: 5rem 2rem;
 }
 .services-section {
@@ -65,7 +65,8 @@ body {
 .card {
     flex: 1 1 20rem;
     text-align: center;
-    background-color: aliceblue;
+    background-color: rgb(22, 21, 21);
+    color: white;
     padding: 1.2rem;
 }
 .card > * {
