--- a/Class Exercise 04/style.css
+++ b/Class Exercise 04/style.css
@@ -85,7 +85,7 @@ body {
     line-height: 1.7;
 }
 #pop-up-modal {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     position: fixed;
