--- a/Class Exercise 04/style.css
+++ b/Class Exercise 04/style.css
@@ -5,13 +5,12 @@
 }
 body {
     font-family: 'Poppins', sans-serif;
-    overflow-x: hidden;
 }
 .background {
     background-color: #ff6d00;
     clip-path: polygon(0 0, 100% 0%, 100% 39%, 0 70%);
-    width: 100vw;
-    height: 120vh;
+    width: 100%;
+    height: 140vh;
     position: absolute;
     top: 0%;
     left: 0%;
@@ -109,20 +108,26 @@ body {
     line-height: 1.7;
 }
 #pop-up-modal {
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
+    top: 0%;
+    left: 0%;
     z-index: 10;
     width: 100vw;
     height: 100vh;
     background-color: rgba(255, 255, 255, 0.9);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
     color: white;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 500ms ease;
 }
-#pop-up-modal form {
+#pop-up-modal.show {
+    opacity: 1;
+    pointer-events: all;
+}
+#pop-up-form{
     display: flex;
     flex-direction: column;
     width: clamp(30rem, 50vw, 40rem);
@@ -130,18 +135,24 @@ body {
     border: 2px solid black;
     padding: 2rem;
     position: relative;
+    transition: transform 500ms ease;
+    transform: scale(0);
     z-index: 2;
 }
-#pop-up-modal form div{
+#pop-up-form div{
     display: flex;
     flex-direction: column;
 }
-#pop-up-modal form > * {
+#pop-up-form > * {
     margin-bottom: 1.2rem;
 }
-#pop-up-modal form h4 {
+#pop-up-form h4 {
     font-size: 2.5rem;
     font-weight: 600;
+}
+#pop-up-form.show {
+    transform: scale(1);
+    pointer-events: all;
 }
 label {
     margin-bottom: .3rem;
@@ -152,7 +163,7 @@ input {
     padding: .5rem;
     font-size: 1rem;
     outline: none;
-    border: none;
+    border: 1px solid black;
 }
 #message {
     height: 10rem;
@@ -161,7 +172,7 @@ input {
     font-size: 1rem;
     resize: none;
     outline: none;
-    border: none;
+    border: 1px solid black;
 }
 #send-btn {
     padding: .5rem;
