--- a/Class Exercise 04/style.css
+++ b/Class Exercise 04/style.css
@@ -8,9 +8,9 @@ body {
 }
 .background {
     background-color: #ff6d00;
-    clip-path: polygon(0 0, 100% 0%, 100% 39%, 0 70%);
+    clip-path: polygon(0 0, 100% 0%, 100% 50%, 0 100%);
     width: 100%;
-    height: 140vh;
+    height: 100vh;
     position: absolute;
     top: 0%;
     left: 0%;
@@ -22,14 +22,15 @@ body {
 }
 .services {
     padding: 5rem 2rem;
+    min-height: 100vh;
+    width: 100%;
 }
 .services-section {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1rem;
+    gap: 1.5rem;
 }
-.services-section div {
+.services-section div{
     flex: 1 1 15rem;
 }
 .services-section span {
@@ -71,21 +72,19 @@ body {
     box-shadow: 0 5px 0 black;
 }
 .cards-section {
-    padding-top: 3rem;
     display: flex;
-    width: 100%;
+    flex-wrap: wrap;
     gap: 1rem;
+    padding-top: 3rem;
 }
 .card {
-    display: inline-block;
-    width: 33%;
+    flex: 1 1 0;
     height: 37rem;
     text-align: center;
     background-color: white;
     border: 2px solid black;
     padding: 2rem 1.2rem 1.2rem 1.5rem;
     transition: all 300ms ease;
-    
 }
 .card:hover {
     transform: perspective(75em) rotateX(10deg) scale(.95);
@@ -199,4 +198,14 @@ input {
     height: 100%;
     position: absolute;
     z-index: 1;
+}
+@media screen and (max-width: 1000px) {
+    .background {
+        height: 180vh;
+    }
+}
+@media screen and (max-width: 800px) {
+    .background {
+        height: 220vh;
+    }
 }
