--- a/Class Exercise 04/style.css
+++ b/Class Exercise 04/style.css
@@ -114,8 +114,8 @@ body {
     top: 0%;
     left: 0%;
     z-index: 10;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(255, 255, 255, 0.9);
     color: white;
     opacity: 0;
