Fixed the responsivness

--- a/Class Exercise 04/style.css
+++ b/Class Exercise 04/style.css
@@ -28,24 +28,24 @@ body {
 .services-section {
     display: flex;
     flex-wrap: wrap;
-    gap: 1.5rem;
+    gap: 1.7rem;
 }
 .services-section div{
     flex: 1 1 15rem;
 }
 .services-section span {
     display: inline-block;
-    font-size: 1.3rem;
+    font-size: lamp(1rem, 5vw, 1.3rem);
     text-transform: uppercase;
     margin-bottom: .35rem;
     color: rgba(255, 255, 255, 0.8);
 }
 .services-heading {
-    font-size: 3rem;
+    font-size: clamp(2.6rem, 5vw, 3.2rem);
     line-height: 1.3;
 }
 .services-copy {
-    font-size: 1.05rem;
+    font-size: clamp(.65rem, 5vw, 1.1rem);
     line-height: 1.7;
     padding-top: 2rem;
     color: #fdfdfd9c;
@@ -99,7 +99,7 @@ body {
     width: 18rem;
 }
 .card h4 {
-    font-size: 1.7rem;
+    font-size: 1.8rem;
     margin: 1rem 0;
     color: #ff6d00;
 }
@@ -135,7 +135,7 @@ body {
     padding: 2rem;
     position: relative;
     transition: transform 500ms ease;
-    transform: scale(0);
+    transform: scale(0) translateY(50rem);
     z-index: 2;
 }
 #pop-up-form div{
@@ -150,7 +150,7 @@ body {
     font-weight: 600;
 }
 #pop-up-form.show {
-    transform: scale(1);
+    transform: scale(1) translateY(0);
     pointer-events: all;
 }
 label {
@@ -207,5 +207,8 @@ input {
 @media screen and (max-width: 800px) {
     .background {
         height: 220vh;
+    }
+    .services {
+        padding: 2rem 1.2rem;
     }
 }
