--- a/Exam/style.css
+++ b/Exam/style.css
@@ -12,22 +12,33 @@ body {
     display: flex;
     gap: 1.5rem;
 }
-.right-container {
+.left-container {
     width: 50%;
 }
-.right-container img {
+.left-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 header {
-    font-size: 2rem;
+    font-size: 3.5rem;
+    line-height: 1.1;
 }
-.left-container {
+.right-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    padding: 0 1rem;
+    padding: 0 10rem 0 3rem;
+}
+.right-container p {
+    max-width: 45ch;
+    font-size: 1.2rem;
+    margin: 1.5rem 0;
+    line-height: 1.4;
+}
+.right-container button {
+    font-size: 1.1rem;
+    max-width: 12rem;
+    padding: .55rem;
+    cursor: pointer;
 }
