--- a/Exam/style.css
+++ b/Exam/style.css
@@ -9,30 +9,33 @@ body {
 }
 .hero-section {
     min-height: 100vh;
+    flex-wrap: wrap;
     display: flex;
     gap: 1.5rem;
 }
 .left-container {
-    width: 50%;
+    flex: 1 1 28rem;
 }
 .left-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-header {
-    font-size: 3.5rem;
+header{
+    font-size: clamp(2.5rem, 5vw, 3.5rem);
+    max-width: 25ch;
     line-height: 1.1;
 }
 .right-container {
+    flex: 1 1 28rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 10rem 0 3rem;
+    padding: 0 clamp(1rem, 5vw, 2rem);
 }
 .right-container p {
     max-width: 45ch;
-    font-size: 1.2rem;
+    font-size: clamp(1, 5vw, 11.2rem);
     margin: 1.5rem 0;
     line-height: 1.4;
 }
