--- a/Javascript/Exercises/Exercise 05/User Registration/style.css
+++ b/Javascript/Exercises/Exercise 05/User Registration/style.css
@@ -41,11 +41,14 @@ button {
     transition: background 200ms ease;
 }
 button:hover {
-    background-color: rgb(84, 122, 158);
+    background-color: rgb(108, 133, 179);
     cursor: pointer;
 }
 span {
     color: rgb(253, 75, 75);
     padding: .2rem;
     text-align: center;
+}
+table {
+    margin-top: .5rem;
 }
